# slurm_jobsubmit

./: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
auxdir/: Makefile.in  slurm.m4
contribs/: Makefile.in
contribs/arrayrun/: Makefile.in
contribs/cray/: Makefile.in  opt_modulefiles_slurm
contribs/lua/: Makefile.in
contribs/pam/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/phpext/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/slurmdb-direct/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
slurm/: slurm.h.in
src/: Makefile.in
src/api/: Makefile.in
src/common/: Makefile.in  read_config.c  read_config.h
src/database/: Makefile.in
src/db_api/: Makefile.in
src/plugins/: Makefile.in
src/plugins/job_submit/dynalloc/: Makefile.am  Makefile.in  allocate.c  allocate.h  allocator.c  allocator.h  argv.c  argv.h  constants.h  deallocate.c  deallocate.h  info.c  info.h  job_submit_dynalloc.c  msg.c  msg.h
src/plugins/sched/dynalloc/: Makefile.am  allocate.c  info.c  ip_port.c  ip_port.h  msg.c  sched_dynalloc.c
src/sacct/: Makefile.in
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in
src/sattach/: Makefile.in
src/sbatch/: Makefile.in
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
src/slurmctld/: Makefile.in  job_mgr.c
src/slurmd/: Makefile.in
testsuite/: Makefile.in
(+135 files in other folders)
